DirOutput/objects/SF_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Trace__c</fullName>
        <label>Error Trace</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <label>Error Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_List__c</fullName>
        <label>Record List</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SF Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Method_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SFERR-{00000000}</displayFormat>
        <label>SF Error Logs No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>